force-app/main/default/objects/Supplier_Quotation_Line__c/Supplier_Quotation_Line__c.object-meta.xml
<CustomObject>
    <label>Supplier Quotation Line</label>
    <nameField>
        <displayFormat>SQL-{000000}</displayFormat>
        <label>Supplier Quotation Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Quotation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>