force-app/main/default/objects/Supplier_Quotation_Line__c/fields/Brand_Offered__c.field-meta.xml
<CustomField>
    <fullName>Brand_Offered__c</fullName>
    <label>Brand Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>