force-app/main/default/objects/Supplier_Quotation_Line__c/fields/Delivery_Date_Offered__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Offered__c</fullName>
    <label>Delivery Date Offered</label>
    <type>Date</type>
</CustomField>