force-app/main/default/objects/Supplier_Quotation_Line__c/fields/Quoted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Quantity__c</fullName>
    <label>Quoted Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>