force-app/main/default/objects/Supplier_Quotation_Line__c/fields/RFQ_Line__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ Line</label>
    <referenceTo>RFQ_Line__c</referenceTo>
    <relationshipLabel>Supplier Quotation Lines</relationshipLabel>
    <relationshipName>Supplier_Quotation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>