force-app/main/default/objects/Supplier_Quotation_Line__c/fields/Supplier_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quotation__c</fullName>
    <label>Supplier Quotation</label>
    <referenceTo>Supplier_Quotation__c</referenceTo>
    <relationshipLabel>Supplier Quotation Lines</relationshipLabel>
    <relationshipName>Supplier_Quotation_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>